add: complete crud operations to connector api
