# src/routers/connector.py
@@ -1,3 +1,4 @@
+from typing import List
 from fastapi import APIRouter
 
 from connector.factory import ConnectorFactory
@@ -8,14 +9,23 @@ from database.elastic import ElasticAdapter
 
 router = APIRouter()
 
+
+@router.post('')
+def create_connector(connector: APIConnector):
+    elastic_adapter = ElasticAdapter()
+    elastic_adapter.create_connector(connector)
+
 @router.get('/{company_name}')
 def get_connector(company_name: str) -> APIConnector:
     elastic_adapter = ElasticAdapter()
     return elastic_adapter.read_connector(company_name)
 
-
-@router.post('/{company_name}')
-def create_connector(company_name: str, connector: APIConnector):
+@router.put('{company_name}')
+def update_connector(company_name: str, connector: APIConnector):
     elastic_adapter = ElasticAdapter()
-    elastic_adapter.create_connector(connector)
+    elastic_adapter.update_connector(company_name, connector)
 
+@router.delete('/{company_name}')
+def delete_connector(company_name: str):
+    elastic_adapter = ElasticAdapter()
+    elastic_adapter.delete_connector(company_name)
